--- a/frontend/src/css/ProductList.css
+++ b/frontend/src/css/ProductList.css
@@ -46,39 +46,9 @@
     justify-content: center;
 }
 
-.product-list-info-small{
-    grid-area: info;
 
-    /* background-color: red; */
 
-    /* padding-left: 20px; */
-    /* padding-top: 8px; */
-    display: grid;
-
-    grid-template-columns: calc(100% - 170px) 170px;
-    grid-template-rows: 40px 68px 30px;
-    grid-template-areas:    "product-title product-price"
-                            "product-owner product-owner"
-                            "product-details product-details";
-}
-
-.product-list-info-medium{
-    grid-area: info;
-
-    /* background-color: red; */
-
-    /* padding-left: 20px; */
-    /* padding-top: 8px; */
-    display: grid;
-
-    grid-template-columns: calc(100% - 180px) 180px;
-    grid-template-rows: 40px 68px 30px;
-    grid-template-areas:    "product-title product-price"
-                            "product-owner product-owner"
-                            "product-details product-details";
-}
-
-.product-list-info-large{
+.product-list-info{
     grid-area: info;
 
     /* background-color: red; */
@@ -181,6 +151,7 @@
 .product-list-price-container{
     grid-area: product-price;
 
+    /* background-color: aqua; */
     
     /* center contains vertically */
     display: flex;
@@ -189,6 +160,10 @@
 
 .product-list-price {
     padding-top: 8px;
+
+    margin-left: auto !important;
+    margin-right: 20px;
+
     font-size: 0.95rem;
     color: #9c9c9c;
 
@@ -201,9 +176,8 @@
 }
 
 @media (max-width: 1050px) {
-    .product-list-info-large,
-    .product-list-info-medium,
-    .product-list-info-small {
+
+    .product-list-info {
         /* background-color: red; */
         /* padding-left: 20px; */
         /* padding-top: 8px; */
@@ -217,6 +191,17 @@
     }
     .product-list-price {
         padding-left: 20px;
+    }
+
+    .product-list-price {
+        padding-top: 8px;
+    
+        margin-left: 0px !important;
+        margin-right: 0px;
+    
+        font-size: 0.95rem;
+        color: #9c9c9c;
+    
     }
 
 }
