--- a/frontend/src/css/Bids.css
+++ b/frontend/src/css/Bids.css
@@ -86,6 +86,13 @@
     outline: none !important;
 }
 
+.circular-container {
+    /* center text horizontally and vertically */
+    padding: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .bids-title{
     grid-area: title;
