--- a/frontend/src/css/NewAuction.css
+++ b/frontend/src/css/NewAuction.css
@@ -96,6 +96,8 @@
 
 .shrinked-textfield{ margin-top: 30px !important;}
 
+.shrinked-textfield-second{ margin-top: 26px !important;}
+
 @media (max-width: 1450px) {
 
     .new-bid-container{
