--- a/frontend/src/css/Administration.css
+++ b/frontend/src/css/Administration.css
@@ -47,7 +47,12 @@
 }
 
 .empty-list-msg {
+    color: #797979;
+}
+
+.forbidden-msg{
     color: rgb(121, 121, 121);
+    font-size: 1.2rem;
 }
 
 .check-icon-admin{
@@ -99,6 +104,26 @@
 .delete-icon-admin:hover {
     background-color:#ff616e54 !important;
     color: #D83A56 !important;
+}
+
+.forbidden-img{
+    width: 140px;
+    height: 140px;
+    margin-top: 100px;
+}
+
+.forbidden-stack{
+    /* center text horizontally and vertically */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.forbidden-container{
+    /* center text horizontally and vertically */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .admin-menu {
