--- a/frontend/src/css/profile.css
+++ b/frontend/src/css/profile.css
@@ -135,6 +135,15 @@
 
 }
 
+.profile-loading {
+     /* center text horizontally and vertically */
+     display: flex;
+     align-items: center;
+     justify-content: center;
+ 
+     margin-top: 50px;
+}
+
 .cancel-btn {
     color: #D83A56 !important;
 }
