--- a/frontend/src/css/SignIn.css
+++ b/frontend/src/css/SignIn.css
@@ -124,6 +124,13 @@ input {
     justify-content: center;
 }
 
+.guest-button {
+    background-color: #756a91!important;
+    height: 36px;
+    border-radius: 49px !important;
+    margin-top: 120px !important;
+    font-size: 0.8rem !important;
+}
 
 .signin-title{
     font-size: 2.5rem;
