--- a/frontend/src/css/SignIn.css
+++ b/frontend/src/css/SignIn.css
@@ -132,6 +132,11 @@ input {
     font-size: 0.8rem !important;
 }
 
+.guest-button:hover {
+    background-color: #9184b3!important;
+    
+}
+
 .signin-title{
     font-size: 2.5rem;
     color: rgb(39, 39, 39);
