--- a/frontend/src/css/ProductList.css
+++ b/frontend/src/css/ProductList.css
@@ -138,6 +138,10 @@
     /* center contains vertically */
     display: flex;
     align-items: center;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .product-list-title{
