--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -42,6 +42,10 @@
 
 }
 
+.disabled-icn-button{
+    cursor: default!important;
+}
+
 .column-middle {
     grid-area: main;
     /* box-shadow: 0px 0px 31px 0px rgba(84,84,84,0.01);
