Huge update with several bug fixes!

--- a/frontend/src/css/Administration.css
+++ b/frontend/src/css/Administration.css
@@ -136,6 +136,10 @@
     margin-top: 60px;
 }
 
+.admin-list{
+    min-height: 540px !important;
+}
+
 .admin-list-divider{
     margin-top: 5px !important;
     margin-bottom: 5px !important;
